rename classes and restyle social-button elements

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   background-color: #ffefb2;
 }
 
-.card-wrapper {
+.wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,7 +21,7 @@ body {
   font-family: "Lato", sans-serif;
 }
 
-.card_container {
+.card {
   background-color: #f9f9f9;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 
@@ -33,7 +33,7 @@ body {
   flex-direction: row;
 }
 
-.card_left {
+.card__left {
   background-color: #5bc6ac;
   width: 40%;
   height: 100%;
@@ -43,7 +43,7 @@ body {
   flex-direction: column;
 }
 
-.image-container {
+.card__left-img-box {
   width: 100%;
   height: 100%;
 
@@ -52,11 +52,11 @@ body {
   justify-content: center;
 }
 
-.image {
+.card__left-img {
   width: 70%;
 }
 
-.card_right {
+.card__right {
   height: 100%;
   width: 60%;
 
@@ -64,26 +64,22 @@ body {
   padding: 15px;
 }
 
-.detail-group {
-  margin-bottom: 5px;
+.card__right-id-box {
+  margin-bottom: 25px;
 }
 
-.margin-large {
-  margin-bottom: 20px;
-}
-
-.detail-1 {
+.card__right-id {
   margin-top: 10px;
   text-align: center;
 }
-.name {
+.card__right-id-name {
   display: block;
   margin-bottom: -12px;
 
   font-size: 22px;
 }
 
-.occupation {
+.card__right-id-batch {
   font-size: 15px;
   color: #f9f9f9;
 
@@ -93,39 +89,65 @@ body {
   border-radius: 5px;
 }
 
-.information {
+.card__right-detail-box {
   display: flex;
   width: 100%;
   flex-direction: row;
 }
 
-.information-left {
+.card__right-detail {
   width: 50%;
   margin-right: 5px;
 }
 
-.information-detail {
+.card__right-detail-group {
   width: 50%;
   margin-bottom: 15px;
 }
-.email-label,
-.mobile-label {
+.card__right-detail-label {
   font-size: 17px;
   font-weight: 700;
 }
 
-.email,
-.mobile {
+.card__right-detail-data {
   border-bottom: 2px solid #5bc6ac;
   width: 152px;
 }
 
-.social-container {
+.card__right-social {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 15px;
 }
-a {
+
+.card__right-social-box:not(:last-child) {
+  display: block;
+  margin-right: 10px;
+  height: 30px;
+  width: 30px;
+}
+
+.card__right-social-box a {
+  color: #484946;
+  cursor: pointer;
+  text-decoration: none;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: 30px;
+
+  font-size: 25px;
+  transition: all 0.1s;
+}
+
+.card__right-social-box a:hover {
+  font-size: 30px;
+}
+
+/* a {
   color: #484946;
   cursor: pointer;
   text-decoration: none;
@@ -152,4 +174,4 @@ a {
   justify-content: center;
 
   width: 2rem;
-}
+} */
