--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,13 @@ body {
 
 .wrapper {
   display: flex;
+  flex-wrap: wrap;
+
   align-items: center;
   justify-content: center;
-  height: 100vh;
+
+  width: 100vw;
+  min-height: 100vh;
 
   font-family: "Lato", sans-serif;
 }
@@ -25,17 +29,19 @@ body {
   background-color: #f9f9f9;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 
-  width: 600px;
+  width: 650px;
   height: 280px;
   border-radius: 10px;
 
   display: flex;
   flex-direction: row;
+
+  margin: 10px;
 }
 
 .card__left {
   background-color: #5bc6ac;
-  width: 40%;
+  width: 35%;
   height: 100%;
   border-radius: 10px 0 0 10px;
 
@@ -58,7 +64,7 @@ body {
 
 .card__right {
   height: 100%;
-  width: 60%;
+  width: 65%;
 
   color: #484946;
   padding: 15px;
@@ -97,11 +103,11 @@ body {
 
 .card__right-detail {
   width: 50%;
-  margin-right: 5px;
+  margin-right: 10px;
 }
 
 .card__right-detail-group {
-  width: 50%;
+  width: 100%;
   margin-bottom: 15px;
 }
 .card__right-detail-label {
@@ -111,7 +117,8 @@ body {
 
 .card__right-detail-data {
   border-bottom: 2px solid #5bc6ac;
-  width: 152px;
+  width: 100%;
+  font-size: 14.5px;
 }
 
 .card__right-social {
